[package]
name = "mc_wrapper"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
regex = "1"
mlua = { version = "0.11.5", features = ["lua54", "async", "send", "vendored", "serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
walkdir = "2"
