[package]
name = "mcrstw"
version = "0.2.2"
edition = "2024"
rust-version = "1.85"
description = "A high-performance Minecraft server wrapper with Lua 5.4 plugin support."
license = "GPL-3.0-or-later"
repository = "https://github.com/lxbme/MCRW"
homepage = "https://github.com/lxbme/MCRW"
readme = "README.md"
keywords = ["minecraft", "wrapper", "lua", "plugin", "server"]
categories = ["command-line-utilities", "game-development"]
authors = ["lxbme"]
exclude = [
    "server/",
    "docs/",
    "target/",
    "*.log",
]

[dependencies]
tokio = { version = "1", features = ["full"] }
regex = "1"
mlua = { version = "0.11.5", features = ["lua54", "async", "send", "vendored", "serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
walkdir = "2"
cron = "0.12"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "gzip"] }
